# TerraFirma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  app.rc
.github/workflows/: cmake-multi-platform.yml  cpp-macos.yml  cpp-ubuntu.yml  cpp-windows.yml
assets/jsons/: globals.json  header.json  items.json  npcs.json  tiles.json  walls.json
editor/: Cargo.toml  run.sh
editor/src/: color.rs  dialogs.rs  globals.rs  header.rs  icons.rs  items.rs  main.rs  npcs.rs  prefixes.rs  tiles.rs  walls.rs
src/: .gitignore  CMakeLists.txt  bestiary.cpp  bestiary.h  embed.cpp  filedialogfont.cpp  findchests.cpp  findchests.h  gui.cpp  gui.h  handle.cpp  handle.h  hilitewin.cpp  hilitewin.h  infowin.cpp  infowin.h  json.cpp  json.h  killwin.cpp  killwin.h  l10n.cpp  l10n.h  main.cpp  map.cpp  map.h  pipelines.cpp  pipelines.h  renderer.cpp  renderer.h  settings.cpp  settings.h  steamconfig.cpp  steamconfig.h  terrafirma.cpp  terrafirma.h  textures.cpp  textures.h  tiles.cpp  tiles.h  uvrules.cpp  (+7 more)
src/shaders/: background.frag  background.vert  build.sh  flat.vert  hilite.frag  hilite.vert  liquid.frag  liquid.vert  tiles.frag  tiles.vert
src/shaders/compiled/: background.frag.dxil  background.frag.msl  background.frag.spv  background.vert.dxil  background.vert.msl  background.vert.spv  flat.vert.dxil  flat.vert.msl  flat.vert.spv  hilite.frag.dxil  hilite.frag.msl  hilite.frag.spv  hilite.vert.dxil  hilite.vert.msl  hilite.vert.spv  liquid.frag.dxil  liquid.frag.msl  liquid.frag.spv  liquid.vert.dxil  liquid.vert.msl  liquid.vert.spv  tiles.frag.dxil  tiles.frag.msl  tiles.frag.spv  tiles.vert.dxil  tiles.vert.msl  tiles.vert.spv  water.frag.dxil  water.vert.dxil  water.vert.msl  water.vert.spv
